--- a/site/sass/components/_search-box.scss
+++ b/site/sass/components/_search-box.scss
@@ -1,7 +1,7 @@
 .search-box {
   align-items: center;
   display: flex;
-  grid-column: -2 / -1;
+  grid-column: -1 / -1;
   grid-row: 1 / span 1;
   height: 2.5em;
   justify-content: space-between;
@@ -52,6 +52,7 @@
 
   &-extended {
     grid-column: -3 / -1;
+    z-index: 5;
 
     @include minLangMQ($bkpt-map--header--large) {
       grid-column: -4 / -2;
